<?xml version="1.0"?>
<package format="2">
  <name>pca9685_board</name>
  <version>0.0.0</version>
  <description>ROS Node to control servos on a PCA9685 board</description>

  <maintainer email="liamondrop@gmail.com">Liam Bowers</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
